--- a/src/shared/popup.css
+++ b/src/shared/popup.css
@@ -17,6 +17,15 @@ div#format, div#button {
   justify-content: center;
 }
 
+button.apply-format {
+  font-size: 12px;
+  border: 0;
+  border-radius: 2px;
+  padding: 4px 8px;
+  margin-top: 15px;
+  background: rgba(72, 113, 190, 0.1);
+}
+
 button.options {
   font-size: 12px;
   border: 0;
