--- a/src/shared/popup.css
+++ b/src/shared/popup.css
@@ -10,6 +10,7 @@ p { text-align: center; }
 div#format {
   font-size: 18px;
   font-weight: 500;
+  background-color: #48ad48;
 }
 
 div#format, div#button {
@@ -17,13 +18,27 @@ div#format, div#button {
   justify-content: center;
 }
 
+fieldset
+{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 button.apply-format {
+  background-color: #3710a5;
+	border: 2px solid #fcff61;
+	color: whitesmoke;
+	padding: 1em 1.5em;
+	text-align: center;
+	text-decoration: none;
+	font-size: 1em;
+	display: inline-block;
+	width: 100%;
+	border-radius: 5px;
+  box-shadow: 3px 3px 8px 0 #000; /* h-offset v-offset blur spread color */
+  
   font-size: 12px;
-  border: 0;
-  border-radius: 2px;
-  padding: 4px 8px;
-  margin-top: 15px;
-  background: rgba(72, 113, 190, 0.1);
+  margin-top: 5px;
 }
 
 button.options {
